# CF-Activation-Patching-for-Mechanistic-Analysis-of-MedSAM-Boundary

./: .gitignore  README.md  RELEASE_CONTENTS.md  pyproject.toml
cluster/: postprocess_supervisor_interior_neck.sh  postprocess_supervisor_robustness.sh  postprocess_supervisor_robustness_neck.sh  run_activation_probe_nih_effusion.slurm  run_cfseg_generate_nih_effusion.slurm  run_medsam_nih_effusion.slurm  run_prism_diffusion_nih_effusion.slurm  run_radedit_nih_effusion.slurm  submit_supervisor_interior_neck.sh  submit_supervisor_robustness.sh  submit_supervisor_robustness_missing_regions.sh  submit_supervisor_robustness_neck.sh
configs/: paths.example.yaml
docs/: data_access_checklist.md  dataset_alternatives.md  expert_review_protocol.md  expert_review_template.csv  nih_effusion_200_scale_run.md  start_here.md  week1_runbook.md
notebooks/: README.md
paper/: main.tex
reproducibility/: README.md
scripts/: README.md  add_boxes_from_masks.py  bootstrap_activation_tables.py  bootstrap_statistical_tables.py  build_manifest.py  build_nih_manifest.py  check_paths.py  cluster_download_nih_chestxray14.sh  cluster_start_chexmask_download.sh  cluster_start_nih_download.sh  compare_metric_tables.py  compute_region_token_summary.py  create_prompt_jitter_manifest.py  download_cfseg_checkpoints.py  download_chexmask_subset.py  download_chexmask_subset.sh  download_nih_chestxray14.py  evaluate_masks.py  export_chexmask_nih_masks.py  import_cfseg_counterfactuals.py  make_activation_patching_qualitative_panel.py  make_counterfactual_figure_panel.py  make_manifest_qa_sheet.py  (+16 more)
(+43 files in other folders)
